# rocq-json

./: .gitignore  .gitmodules  Dockerfile.artifact  README.md  _CoqProject  dune-project  meta.yml  rocq-json.opam
.github/workflows/: docker-action.yml
derivers/: dune  jsonifiable.elpi  namer.elpi
extracting/: JSON_Derive_Tests.v  bench_time.sh  dune  harness.ml  harness_2.ml  harness_suite.ml
scripts/: bench_jsonifiable_stdlib.py  make_paper_results.py
theories/: All.v  ElpiTut.v  JSON.v  JSON_Axioms.v  JSON_Core.old  JSON_Derive.v  JSON_Derive_Tests.v  JSON_Error_Strings.v  JSON_Stringifiable.v  JSON_Stringification.v  JSON_Type.v  dune
write_up/: .gitignore  ARTIFACT.md  ATVA_CFP.md  coq-listings.tex  paper.tex  run_artifact.sh
write_up/appendices/: benchmarking.tex  quickstart.tex  reference-manual.tex
