(coq.theory
 (name rocq_json_derivers)
 (package rocq-json))

(rule
 (target dummy.v)
 (deps
  (glob_files *.elpi))
 (action
  (with-stdout-to
   %{target}
   (progn
    (run rocq_elpi_shafile %{deps})))))

(install
 (files
  (glob_files
   (*.elpi with_prefix coq/user-contrib/elpi/apps/derive/elpi/)))
 (section lib_root)
 (package rocq-json))
