(coq.extraction
 (prelude JSON_Derive_Tests)
 (theories
  rocq_json_derivers
  Stdlib
  Ltac2
  RocqCandy
  elpi
  elpi_elpi
  elpi.apps.derive.elpi
  RocqJSON)
 (extracted_modules jsonifiable_suite))

(executable
 (name harness_suite)
 (modules harness_suite jsonifiable_suite))

(rule
 (targets benched.stamp extraction_bench.csv)
 (deps
  harness_suite.exe)
 (action
  (run ./harness_suite.exe)))
